--- a/JogoDaMemoria/JogoDaMemoria/Base.lproj/Main.storyboard
+++ b/JogoDaMemoria/JogoDaMemoria/Base.lproj/Main.storyboard
@@ -52,6 +52,14 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="6ok-pb-SgQ"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NTv-jB-fTJ">
+                                <rect key="frame" x="640" y="20" width="59" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Reiniciar"/>
+                                <connections>
+                                    <action selector="reiniciarJogoButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qht-Al-Fzr"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
